(executables
 (names plots anim)
 (libraries vplot staTz numerics))

(rule
 (targets plot.pdf)
 (action (with-stdout-to ${@} (run ${test:plots.exe}))))

(alias
 (name runtest)
 (deps    (:exe plots.exe))
 (action (run %{exe})))

(alias
 (name runtest_anim)
 (deps    (:exe anim.exe))
 (action (run %{exe})))
